PLP-linguagens/Funcional1/src/lf1/plp/functional1/parser/Func1Parser.java
/* Func1Parser.java */
/* Generated By:JavaCC: Do not edit this line. Func1Parser.java */
package lf1.plp.functional1.parser;
import lf1.plp.functional1.*;
import lf1.plp.functional1.declaration.DecVariavel;
import lf1.plp.functional1.declaration.DeclaracaoFuncional;
import lf1.plp.functional1.declaration.DecFuncao;
import lf1.plp.functional1.declaration.DecComposta;
import lf1.plp.functional1.expression.ExpDeclaracao;
import lf1.plp.functional1.expression.IfThenElse;
import lf1.plp.functional1.expression.Aplicacao;
import java.util.*;
import lf1.plp.expressions2.expression.ExpAnd;
import lf1.plp.expressions2.expression.ExpConcat;
import lf1.plp.expressions2.expression.ExpEquals;
import lf1.plp.expressions2.expression.ExpLength;
import lf1.plp.expressions2.expression.ExpMenos;
import lf1.plp.expressions2.expression.ExpNot;
import lf1.plp.expressions2.expression.ExpOr;
import lf1.plp.expressions2.expression.ExpSoma;
import lf1.plp.expressions2.expression.ExpSub;
import lf1.plp.expressions2.expression.Expressao;
import lf1.plp.expressions2.expression.Id;
import lf1.plp.expressions2.expression.Valor;
import lf1.plp.expressions2.expression.ValorBooleano;
import lf1.plp.expressions2.expression.ValorInteiro;
import lf1.plp.expressions2.expression.ValorString;

public class Func1Parser implements Func1ParserConstants {
  public static void main(String args [])
  {
    Func1Parser parser;
    if (args.length == 0)
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from standard input . . .");
      parser = new Func1Parser(System.in);
    }
    else if (args.length == 1)
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Reading from file " + args [0] + " . . .");
      try
      {
        parser = new Func1Parser(new java.io.FileInputStream(args [0]));
      }
      catch (java.io.FileNotFoundException e)
      {
        System.out.println("Funcional 1 PLP Parser Version 0.0.1:  File " + args [0] + " not found.");
        return;
      }
    }
    else
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Usage is one of:");
      System.out.println("         java Func1Parser < inputfile");
      System.out.println("OR");
      System.out.println("         java Func1Parser inputfile");
      return;
    }
    Programa programa = null;
    try
    {
      programa = parser.Input();
      if (!programa.checaTipo())
          {
            System.out.println("Funcional 1 PLP Parser Version 0.0.1: Erro de tipo.");
        System.exit(0);
      }
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: Funcional1 program parsed successfully.");
    }
    catch (ParseException e)
    {
      e.printStackTrace();
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: Encountered errors during parse.");
      System.exit(0);
    }
    try
    {
      System.out.println("Funcional 1 PLP Parser Version 0.0.1: running...");
      Valor val = programa.executar();
      if (val instanceof ValorString)
      {
        ValorString valStr = (ValorString) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valStr.valor());
      }
      else if (val instanceof ValorInteiro)
      {
        ValorInteiro valInt = (ValorInteiro) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valInt.valor());
      }
      else if (val instanceof ValorBooleano)
      {
        ValorBooleano valBool = (ValorBooleano) val;
        System.out.println("Funcional 1 PLP Parser Version 0.0.1: resultado=" + valBool.valor());
      }
    }
    catch (Exception e)
    {
      e.printStackTrace();
      System.out.println("Funcional 1 PLP Parser Version 0.0.1:  Encountered errors during execution.");
    }
  }

  static final public Programa Input() throws ParseException {Programa retorno;
    retorno = PPrograma();
    jj_consume_token(0);
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Valor PValorInteiro() throws ParseException {Token token;
    token = jj_consume_token(INTEGER_LITERAL);
//System.out.println("ValorInteiro=" + token.toString());
    {if ("" != null) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
}

  static final public Valor PValorBooleano() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new ValorBooleano(false);}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new ValorBooleano(true);}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Valor PValorString() throws ParseException {Token token;
    token = jj_consume_token(STRING_LITERAL);
//		System.out.println("ValorString=" + token.toString().length());
    String tokenStr = token.toString();
    tokenStr = tokenStr.substring(1, tokenStr.length() - 1);
    {if ("" != null) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
}

  static final public Valor PValor() throws ParseException {Valor retorno;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      retorno = PValorInteiro();
      break;
      }
    case TRUE:
    case FALSE:{
      retorno = PValorBooleano();
      break;
      }
    case STRING_LITERAL:{
      retorno = PValorString();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Id PId() throws ParseException {Token token;
    token = jj_consume_token(IDENTIFIER);
//System.out.println("Id=" + token.toString());
    //System.out.println("tam id=" + token.toString().length());
    String tokenStr = token.toString();
    //		tokenStr = tokenStr.substring(1,tokenStr.length()-1);
    {if ("" != null) return new Id(tokenStr);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpMenos() throws ParseException {Expressao retorno;
    jj_consume_token(MINUS);
    retorno = PExpPrimaria();
{if ("" != null) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpNot() throws ParseException {Expressao retorno;
    jj_consume_token(NOT);
    retorno = PExpPrimaria();
{if ("" != null) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpLength() throws ParseException {Expressao retorno;
    jj_consume_token(LENGTH);
    retorno = PExpPrimaria();
if (retorno instanceof ValorString)
    {
      ValorString val = (ValorString) retorno;
      //		    System.out.println("Length val=" + val.valor());
    }
    //		System.out.println("1-" + retorno.toString());
    {if ("" != null) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpPrimaria() throws ParseException {Expressao retorno;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:{
      retorno = PValor();
      break;
      }
    case IDENTIFIER:{
      retorno = PId();
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      retorno = PExpressao();
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
//System.out.println("PExpPrimaria=" + retorno);
    {if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public List PListaId() throws ParseException {List < Id > retorno = null;
  Id id;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      id = PId();
if (retorno == null)
      {
        retorno = new ArrayList < Id > ();
        retorno.add(id);
      }
      else
      {
        retorno.add(id);
      }
    }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public DeclaracaoFuncional PDeclVar() throws ParseException {Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
    jj_consume_token(VAR);
    id = PId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
{if ("" != null) return new DecVariavel(id, expressao);}
    throw new Error("Missing return statement in function");
}

  static final public DeclaracaoFuncional PDeclFuncao() throws ParseException {Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
  List < Id > lista;
    jj_consume_token(FUNC);
    id = PId();
    lista = PListaId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
{if ("" != null) return new DecFuncao(id, lista, expressao);}
    throw new Error("Missing return statement in function");
}

  static final public DecComposta PDecComposta() throws ParseException {DeclaracaoFuncional d1;
        DeclaracaoFuncional d2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      d1 = PDeclVar();
      break;
      }
    case FUNC:{
      d1 = PDeclFuncao();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(COMMA);
    d2 = PDeclFuncional();
{if ("" != null) return new DecComposta(d1, d2);}
    throw new Error("Missing return statement in function");
}

  static final public DeclaracaoFuncional PDeclFuncional() throws ParseException {DeclaracaoFuncional decl;
    if (jj_2_1(2147483647)) {
      decl = PDecComposta();
    } else if (jj_2_2(2147483647)) {
      decl = PDecComposta();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:{
        decl = PDeclVar();
        break;
        }
      case FUNC:{
        decl = PDeclFuncao();
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        decl = PDeclFuncional();
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return decl;}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpDeclaracao() throws ParseException {DeclaracaoFuncional declaracoes;
  Expressao expressao;
    jj_consume_token(LET);
    declaracoes = PDeclFuncional();
    jj_consume_token(IN);
    expressao = PExpressao();
{if ("" != null) return new ExpDeclaracao(declaracoes, expressao);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpCondicional() throws ParseException {Expressao expCond, expThen, expElse;
    jj_consume_token(IF);
    expCond = PExpressao();
    jj_consume_token(THEN);
    expThen = PExpressao();
    jj_consume_token(ELSE);
    expElse = PExpressao();
{if ("" != null) return new IfThenElse(expCond, expThen, expElse);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PAplicacao() throws ParseException {List expressoes = null;
  Expressao expressao;
  Id id;
    id = PId();
    jj_consume_token(LPAREN);
    expressao = PExpressao();
expressoes = new ArrayList();
      expressoes.add(expressao);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      expressao = PExpressao();
expressoes.add(expressao);
    }
    jj_consume_token(RPAREN);
{if ("" != null) return new Aplicacao(id, expressoes);}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpUnaria() throws ParseException {Expressao retorno;
    if (jj_2_3(2147483647)) {
      retorno = PExpMenos();
    } else if (jj_2_4(2147483647)) {
      retorno = PExpNot();
    } else if (jj_2_5(2147483647)) {
      retorno = PExpLength();
    } else if (jj_2_6(2147483647)) {
      retorno = PExpDeclaracao();
    } else if (jj_2_7(2147483647)) {
      retorno = PExpCondicional();
    } else if (jj_2_8(2147483647)) {
      retorno = PAplicacao();
    } else if (jj_2_9(2147483647)) {
      retorno = PExpPrimaria();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
//System.out.println("ExpressaoUnaria=" + retorno);
    {if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpBinaria() throws ParseException {Expressao retorno, param2;
    retorno = PExpBinaria2();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(EQ);
      param2 = PExpBinaria2();
retorno = new ExpEquals(retorno, param2);
    }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpBinaria2() throws ParseException {Expressao retorno, param2;
    retorno = PExpBinaria3();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case CONCAT:
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        param2 = PExpBinaria3();
retorno = new ExpSoma(retorno, param2);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        param2 = PExpBinaria3();
retorno = new ExpSub(retorno, param2);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        param2 = PExpBinaria3();
retorno = new ExpOr(retorno, param2);
        break;
        }
      case CONCAT:{
        jj_consume_token(CONCAT);
        param2 = PExpBinaria3();
retorno = new ExpConcat(retorno, param2);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpBinaria3() throws ParseException {Expressao retorno, param2;
    retorno = PExpUnaria();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
      param2 = PExpUnaria();
retorno = new ExpAnd(retorno, param2);
    }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Expressao PExpressao() throws ParseException {Expressao retorno;
    retorno = PExpBinaria();
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
}

  static final public Programa PPrograma() throws ParseException {Expressao retorno;
    retorno = PExpressao();
//System.out.println("Expressao=" + retorno);
    {if ("" != null) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }
